[metadata]
name = pulp_file
version = 1.8.0.dev
description = File plugin for the Pulp Project,
long_description = file: README.rst
license = GPLv2+
license_file = LICENSE
author = Pulp Project Developers
author_email = pulp-dev@redhat.com
url = https://pulpproject.org/
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
    setuptools >= 40.8.0
    wheel >= 0.29.0

[options.entry_points]
pulpcore.plugin =
    pulp_file = pulp_file:default_app_config
